# masreml

./: .Rbuildignore  .gitattributes  .gitignore  CLAUDE.md  DESCRIPTION  NAMESPACE  README.md
.github/workflows/: build-release.yml
R/: binary.R  blup.R  build_matrix.R  crossval.R  extendr-wrappers.R  gwablup.R  gwas.R  load_data.R  masreml.R  predict.R  reml.R  summary.R  utils.R  zzz-rust-wrappers.R  zzz.R
examples/: 01_basic_continuous_trait.R  02_basic_binary_trait.R  03_marker_QTL_congruency_theory.R  04_gwas.R  05_forward_prediction.R  masbayes_masreml.R
inst/extdata/: demo_data.rds  demo_data_small.rds
man/: as.data.frame.masreml.Rd  build_A_ped.Rd  build_D_snp.Rd  build_G_mh.Rd  build_G_snp.Rd  compute_accuracy.Rd  cv_masreml.Rd  evaluate_prediction.Rd  gwablup.Rd  is_positive_definite.Rd  jitter_diagonal.Rd  load_data.Rd  masreml-package.Rd  masreml.Rd  plot.masreml.Rd  plot.masreml_cv.Rd  predict.masreml.Rd  print.masreml.Rd  print.masreml_cv.Rd  print.masreml_pred.Rd  run_gwas.Rd  set_masreml_threads.Rd  summary.masreml.Rd  summary.masreml_cv.Rd  varcomp.Rd
src/: .gitignore  Makevars.in  Makevars.win.in  entrypoint.c  masreml-win.def
src/rust/: Cargo.toml  build.rs
src/rust/src/: lib.rs
src/rust/src/gwas/: emmax.rs  mod.rs  smoother.rs
src/rust/src/matrix/: mh_additive.rs  mod.rs  pedigree.rs  snp_additive.rs  snp_dominance.rs
src/rust/src/reml/: adaptive.rs  ai_reml.rs  em_reml.rs  he_regression.rs  mod.rs
src/rust/src/solver/: cholesky.rs  factorized.rs  mod.rs  pcg.rs
src/rust/src/utils/: linalg.rs  mod.rs
